[package]
name = "repo_activity"
version = "0.1.0"
edition = "2021"
authors = ["LazynotBug"]
description = "A tool to analyze git repository activities"
license = "MIT"

[dependencies]
git2 = "0.18"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
#sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
rusqlite = "*"
chrono = { version="0.4.30", features=["serde"] }
futures = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"